; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libelftc/extr_libelftc_dem_arm.c_dest_demangle_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libelftc/extr_libelftc_dem_arm.c_dest_demangle_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demangle_data = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demangle_data*)* @dest_demangle_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dest_demangle_data(%struct.demangle_data* %0) #0 {
  %2 = alloca %struct.demangle_data*, align 8
  store %struct.demangle_data* %0, %struct.demangle_data** %2, align 8
  %3 = load %struct.demangle_data*, %struct.demangle_data** %2, align 8
  %4 = icmp ne %struct.demangle_data* %3, null
  br i1 %4, label %5, label %15

5:                                                ; preds = %1
  %6 = load %struct.demangle_data*, %struct.demangle_data** %2, align 8
  %7 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %6, i32 0, i32 2
  %8 = call i32 @vector_str_dest(i32* %7)
  %9 = load %struct.demangle_data*, %struct.demangle_data** %2, align 8
  %10 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %9, i32 0, i32 1
  %11 = call i32 @vector_str_dest(i32* %10)
  %12 = load %struct.demangle_data*, %struct.demangle_data** %2, align 8
  %13 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %12, i32 0, i32 0
  %14 = call i32 @dest_cstring(i32* %13)
  br label %15

15:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @vector_str_dest(i32*) #1

declare dso_local i32 @dest_cstring(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
